okf/products/scalardb/3.16/scalardb-core-status-codes.md
---
type: Troubleshooting
title: ScalarDB Core Error Codes
description: This page provides a list of error codes in ScalarDB Core.
resource: https://scalardb.scalar-labs.com/docs/3.16/scalardb-core-status-codes/
tags:
- scalardb
- v3.16
- phase:operate
- section:troubleshoot
- edition:community
- edition:enterprise-standard
- edition:enterprise-premium
status: stable
product: scalardb
product_title: ScalarDB
version: '3.16'
patch_version: 3.16.6
doc_id: scalardb-core-status-codes
lifecycle_phase: operate
breadcrumb:
- Troubleshoot
- Error Codes
editions:
- Community
- Enterprise Standard
- Enterprise Premium
generated:
  by: process:okf-build/1.0.0
  at: '2026-08-24T00:15:38Z'
sources:
- id: docs-scalardb
  resource: https://github.com/scalar-labs/docs-scalardb/blob/4fa644f40396f8d8f5d3d0d90c217b77ea0e70d1/versioned_docs/version-3.16/scalardb-core-status-codes.mdx
  title: ScalarDB documentation source (MDX)
  author: process:scalar-labs/docs-scalardb
  last_modified: '2026-08-20T18:31:06Z'
---

# ScalarDB Core Error Codes

This page provides a list of error codes in ScalarDB Core.

## Error code classes and descriptions

| Class           | Description                                              |
|:----------------|:---------------------------------------------------------|
| `DB-CORE-1xxxx` | Errors for the user error category                       |
| `DB-CORE-2xxxx` | Errors for the concurrency error category                |
| `DB-CORE-3xxxx` | Errors for the internal error category                   |
| `DB-CORE-4xxxx` | Errors for the unknown transaction status error category |

## `DB-CORE-1xxxx` status codes

The following are status codes and messages for the user error category.

### `DB-CORE-10000`

**Message**

```markdown
Only a single-column index is supported. Operation: %s
```

### `DB-CORE-10001`

**Message**

```markdown
The column of the specified index key is not indexed. Operation: %s
```

### `DB-CORE-10002`

**Message**

```markdown
The index key is not properly specified. Operation: %s
```

### `DB-CORE-10003`

**Message**

```markdown
Clustering keys cannot be specified when using an index. Operation: %s
```

### `DB-CORE-10004`

**Message**

```markdown
Orderings cannot be specified when using an index. Operation: %s
```

### `DB-CORE-10005`

**Message**

```markdown
The limit cannot be negative. Operation: %s
```

### `DB-CORE-10006`

**Message**

```markdown
Cross-partition scan is not enabled. Operation: %s
```

### `DB-CORE-10007`

**Message**

```markdown
Cross-partition scan ordering is not enabled. Operation: %s
```

### `DB-CORE-10008`

**Message**

```markdown
Cross-partition scan filtering is not enabled. Operation: %s
```

### `DB-CORE-10009`

**Message**

```markdown
The specified projection is not found. Projection: %s, Operation: %s
```

### `DB-CORE-10010`

**Message**

```markdown
The clustering key boundary is not properly specified. Operation: %s
```

### `DB-CORE-10011`

**Message**

```markdown
The start clustering key is not properly specified. Operation: %s
```

### `DB-CORE-10012`

**Message**

```markdown
The end clustering key is not properly specified. Operation: %s
```

### `DB-CORE-10013`

**Message**

```markdown
Orderings are not properly specified. Operation: %s
```

### `DB-CORE-10014`

**Message**

```markdown
The specified ordering column is not found. Ordering: %s, Operation: %s
```

### `DB-CORE-10015`

**Message**

```markdown
The condition is not properly specified. Operation: %s
```

### `DB-CORE-10016`

**Message**

```markdown
The table does not exist. Table: %s
```

### `DB-CORE-10017`

**Message**

```markdown
The column value is not properly specified. Column: %s, Operation: %s
```

### `DB-CORE-10018`

**Message**

```markdown
The mutations are empty
```

### `DB-CORE-10019`

**Message**

```markdown
The storage does not support mutations across multiple partitions. Storage: %s; Mutations: %s
```

### `DB-CORE-10020`

**Message**

```markdown
The partition key is not properly specified. Operation: %s
```

### `DB-CORE-10021`

**Message**

```markdown
The clustering key is not properly specified. Operation: %s
```

### `DB-CORE-10022`

**Message**

```markdown
The authentication and authorization feature is not enabled. To use this feature, you must enable it. Note that this feature is supported only in the ScalarDB Enterprise edition
```

### `DB-CORE-10023`

**Message**

```markdown
This condition is not allowed for the PutIf operation. Condition: %s
```

### `DB-CORE-10024`

**Message**

```markdown
This condition is not allowed for the DeleteIf operation. Condition: %s
```

### `DB-CORE-10025`

**Message**

```markdown
Operator must be LIKE or NOT_LIKE. Operator: %s
```

### `DB-CORE-10026`

**Message**

```markdown
An escape character must be a string of a single character or an empty string
```

### `DB-CORE-10027`

**Message**

```markdown
The LIKE pattern must not be null
```

### `DB-CORE-10028`

**Message**

```markdown
The LIKE pattern must not include only an escape character
```

### `DB-CORE-10029`

**Message**

```markdown
The LIKE pattern must not end with an escape character
```

### `DB-CORE-10030`

**Message**

```markdown
The column %s does not exist
```

### `DB-CORE-10031`

**Message**

```markdown
This operation is not supported when getting records of a database without using an index
```

### `DB-CORE-10032`

**Message**

```markdown
This operation is not supported when getting records of a database by using an index
```

### `DB-CORE-10033`

**Message**

```markdown
This operation is not supported when scanning all the records of a database or scanning records of a database by using an index
```

### `DB-CORE-10034`

**Message**

```markdown
This operation is supported only when scanning records of a database by using an index
```

### `DB-CORE-10035`

**Message**

```markdown
This operation is not supported when scanning records of a database by using an index
```

### `DB-CORE-10037`

**Message**

```markdown
This operation is supported only when no conditions are specified. If you want to modify a condition, please use clearConditions() to remove all existing conditions first
```

### `DB-CORE-10038`

**Message**

```markdown
One or more columns must be specified
```

### `DB-CORE-10039`

**Message**

```markdown
One or more partition keys must be specified
```

### `DB-CORE-10040`

**Message**

```markdown
The column definition must be specified since %s is specified as a partition key
```

### `DB-CORE-10041`

**Message**

```markdown
The column definition must be specified since %s is specified as a clustering key
```

### `DB-CORE-10042`

**Message**

```markdown
Invalid ID specified. ID: %d
```

### `DB-CORE-10043`

**Message**

```markdown
The transaction is not active. Status: %s
```

### `DB-CORE-10044`

**Message**

```markdown
The transaction has already been committed. Status: %s
```

### `DB-CORE-10045`

**Message**

```markdown
The transaction has not been prepared. Status: %s
```

### `DB-CORE-10046`

**Message**

```markdown
The transaction has not been prepared or validated. Status: %s
```

### `DB-CORE-10047`

**Message**

```markdown
The transaction already exists
```

### `DB-CORE-10048`

**Message**

```markdown
A transaction associated with the specified transaction ID is not found. The transaction might have expired
```

### `DB-CORE-10049`

**Message**

```markdown
%s is the system namespace name
```

### `DB-CORE-10050`

**Message**

```markdown
The namespace already exists. Namespace: %s
```

### `DB-CORE-10051`

**Message**

```markdown
The namespace does not exist. Namespace: %s
```

### `DB-CORE-10052`

**Message**

```markdown
The table already exists. Table: %s
```

### `DB-CORE-10053`

**Message**

```markdown
The namespace is not empty. Namespace: %s; Tables in the namespace: %s
```

### `DB-CORE-10054`

**Message**

```markdown
The column does not exist. Table: %s; Column: %s
```

### `DB-CORE-10055`

**Message**

```markdown
The index already exists. Table: %s; Column: %s
```

### `DB-CORE-10056`

**Message**

```markdown
The index does not exist. Table: %s; Column: %s
```

### `DB-CORE-10057`

**Message**

```markdown
The column already exists. Table: %s; Column: %s
```

### `DB-CORE-10058`

**Message**

```markdown
The operation does not have the target namespace or table name. Operation: %s
```

### `DB-CORE-10059`

**Message**

```markdown
The specified value of the property '%s' is not a number. Value: %s
```

### `DB-CORE-10060`

**Message**

```markdown
The specified value of the property '%s' is not a boolean. Value: %s
```

### `DB-CORE-10061`

**Message**

```markdown
Reading the file failed. File: %s
```

### `DB-CORE-10062`

**Message**

```markdown
The property 'scalar.db.cross_partition_scan.enabled' must be set to true to use cross-partition scan with filtering or ordering
```

### `DB-CORE-10063`

**Message**

```markdown
This column value is out of range for BigInt. Value: %s
```

### `DB-CORE-10064`

**Message**

```markdown
This type is not supported. Name: %s, Type: %s
```

### `DB-CORE-10065`

**Message**

```markdown
Storage '%s' is not found
```

### `DB-CORE-10066`

**Message**

```markdown
Transaction manager '%s' is not found
```

### `DB-CORE-10068`

**Message**

```markdown
Please use scan() for non-exact match selection. Operation: %s
```

### `DB-CORE-10069`

**Message**

```markdown
Import-related functionality is not supported in Cassandra
```

### `DB-CORE-10070`

**Message**

```markdown
The %s network strategy does not exist
```

### `DB-CORE-10071`

**Message**

```markdown
The property 'scalar.db.contact_port' must be greater than or equal to zero
```

### `DB-CORE-10073`

**Message**

```markdown
The BLOB type is not supported for clustering keys in Cosmos DB. Column: %s
```

### `DB-CORE-10074`

**Message**

```markdown
Import-related functionality is not supported in Cosmos DB
```

### `DB-CORE-10075`

**Message**

```markdown
The property 'scalar.db.contact_points' must not be empty
```

### `DB-CORE-10076`

**Message**

```markdown
Cosmos DB supports only EQ, NE, IS_NULL, and IS_NOT_NULL operations for the BLOB type in conditions. Mutation: %s
```

### `DB-CORE-10077`

**Message**

```markdown
The specified consistency level is not supported. Consistency level: %s
```

### `DB-CORE-10078`

**Message**

```markdown
0x00 bytes are not accepted in BLOB values in DESC order
```

### `DB-CORE-10079`

**Message**

```markdown
Cannot encode a Text value that contains '\u0000'
```

### `DB-CORE-10081`

**Message**

```markdown
An index column cannot be set to an empty value for Text or Blob in DynamoDB. Operation: %s
```

### `DB-CORE-10082`

**Message**

```markdown
DynamoDB supports only EQ, NE, IS_NULL, and IS_NOT_NULL operations for the BOOLEAN type in conditions. Mutation: %s
```

### `DB-CORE-10083`

**Message**

```markdown
Nested multi-storage definitions are not supported. Storage: %s
```

### `DB-CORE-10084`

**Message**

```markdown
Storage not found. Storage: %s
```

### `DB-CORE-10085`

**Message**

```markdown
The namespace name is not acceptable. Namespace: %s
```

### `DB-CORE-10086`

**Message**

```markdown
The table name is not acceptable. Table: %s
```

### `DB-CORE-10087`

**Message**

```markdown
Importing tables is not allowed in the RDB engine. RDB engine: %s
```

### `DB-CORE-10088`

**Message**

```markdown
The %s table must have a primary key
```

### `DB-CORE-10089`

**Message**

```markdown
The RDB engine is not supported. JDBC connection URL: %s
```

### `DB-CORE-10090`

**Message**

```markdown
Data type %s(%d) is not supported: %s
```

### `DB-CORE-10091`

**Message**

```markdown
Data type %s is not supported: %s
```

### `DB-CORE-10092`

**Message**

```markdown
Getting a transaction state is not supported in JDBC transactions
```

### `DB-CORE-10093`

**Message**

```markdown
Rolling back a transaction is not supported in JDBC transactions
```

### `DB-CORE-10094`

**Message**

```markdown
Coordinator tables already exist
```

### `DB-CORE-10095`

**Message**

```markdown
Coordinator tables do not exist
```

### `DB-CORE-10096`

**Message**

```markdown
The namespace %s is reserved. Any operations on this namespace are not allowed
```

### `DB-CORE-10097`

**Message**

```markdown
Mutating transaction metadata columns is not allowed. Table: %s; Column: %s
```

### `DB-CORE-10098`

**Message**

```markdown
A %s condition is not allowed on Put operations
```

### `DB-CORE-10099`

**Message**

```markdown
A %s condition is not allowed on Delete operations
```

### `DB-CORE-10100`

**Message**

```markdown
The condition is not allowed to target transaction metadata columns. Table: %s; Column: %s
```

### `DB-CORE-10101`

**Message**

```markdown
The column '%s' is reserved as transaction metadata
```

### `DB-CORE-10102`

**Message**

```markdown
Non-primary key columns with the 'before_' prefix, '%s', are reserved as transaction metadata
```

### `DB-CORE-10103`

**Message**

```markdown
Put cannot have a condition when the target record is unread and implicit pre-read is disabled. Please read the target record beforehand or enable implicit pre-read: %s
```

### `DB-CORE-10104`

**Message**

```markdown
Writing data already-deleted by the same transaction is not allowed
```

### `DB-CORE-10106`

**Message**

```markdown
Scanning data already-written or already-deleted by the same transaction is not allowed
```

### `DB-CORE-10107`

**Message**

```markdown
The transaction is not validated. When using the SERIALIZABLE isolation level, you need to call validate() before calling commit()
```

### `DB-CORE-10108`

**Message**

```markdown
DynamoDB cannot batch more than 100 mutations at once
```

### `DB-CORE-10126`

**Message**

```markdown
The mutation type is not supported. Only the Put or Delete type is supported. Mutation: %s
```

### `DB-CORE-10127`

**Message**

```markdown
This condition is not allowed for the UpdateIf operation. Condition: %s
```

### `DB-CORE-10128`

**Message**

```markdown
Cross-partition scan with ordering is not supported in Cassandra
```

### `DB-CORE-10129`

**Message**

```markdown
Cross-partition scan with ordering is not supported in Cosmos DB
```

### `DB-CORE-10130`

**Message**

```markdown
Cross-partition scan with ordering is not supported in DynamoDB
```

### `DB-CORE-10136`

**Message**

```markdown
Getting a transaction state is not supported in single CRUD operation transactions
```

### `DB-CORE-10137`

**Message**

```markdown
Rolling back a transaction is not supported in single CRUD operation transactions
```

### `DB-CORE-10138`

**Message**

```markdown
Multiple mutations are not supported in single CRUD operation transactions
```

### `DB-CORE-10139`

**Message**

```markdown
Beginning a transaction is not allowed in single CRUD operation transactions
```

### `DB-CORE-10140`

**Message**

```markdown
Resuming a transaction is not allowed in single CRUD operation transactions
```

### `DB-CORE-10141`

**Message**

```markdown
Using the group commit feature on the Coordinator table with a two-phase commit interface is not allowed
```

### `DB-CORE-10142`

**Message**

```markdown
This operation is supported only when no conditions are specified. If you want to modify a condition, please use clearConditions() to remove all existing conditions first
```

### `DB-CORE-10143`

**Message**

```markdown
The encryption feature is not enabled. To encrypt data at rest, you must enable this feature. Note that this feature is supported only in the ScalarDB Enterprise edition
```

### `DB-CORE-10144`

**Message**

```markdown
The variable key column size must be greater than or equal to 64
```

### `DB-CORE-10145`

**Message**

```markdown
The value of the column %s in the primary key contains an illegal character. Primary-key columns must not contain any of the following characters in Cosmos DB: ':', '/', '\', '#', '?'. Value: %s
```

### `DB-CORE-10146`

**Message**

```markdown
Inserting data already-written by the same transaction is not allowed
```

### `DB-CORE-10147`

**Message**

```markdown
Deleting data already-inserted by the same transaction is not allowed
```

### `DB-CORE-10152`

**Message**

```markdown
The attribute-based access control feature is not enabled. To use this feature, you must enable it. Note that this feature is supported only in the ScalarDB Enterprise edition
```

### `DB-CORE-10158`

**Message**

```markdown
This DATE column value is out of the valid range. It must be between 1000-01-01 and 9999-12-12. Value: %s
```

### `DB-CORE-10159`

**Message**

```markdown
This TIME column value precision cannot be shorter than one microsecond. Value: %s
```

### `DB-CORE-10160`

**Message**

```markdown
This TIMESTAMP column value is out of the valid range. It must be between 1000-01-01T00:00:00.000 and 9999-12-31T23:59:59.999. Value: %s
```

### `DB-CORE-10161`

**Message**

```markdown
This TIMESTAMP column value precision cannot be shorter than one millisecond. Value: %s
```

### `DB-CORE-10162`

**Message**

```markdown
This TIMESTAMPTZ column value is out of the valid range. It must be between 1000-01-01T00:00:00.000Z to 9999-12-31T23:59:59.999Z. Value: %s
```

### `DB-CORE-10163`

**Message**

```markdown
This TIMESTAMPTZ column value precision cannot be shorter than one millisecond. Value: %s
```

### `DB-CORE-10164`

**Message**

```markdown
The underlying-storage data type %s is not supported as the ScalarDB %s data type: %s
```

### `DB-CORE-10188`

**Message**

```markdown
The replication feature is not enabled. To use this feature, you must enable it. Note that this feature is supported only in the ScalarDB Enterprise edition
```

### `DB-CORE-10205`

**Message**

```markdown
Some scanners were not closed. All scanners must be closed before committing the transaction
```

### `DB-CORE-10206`

**Message**

```markdown
Some scanners were not closed. All scanners must be closed before preparing the transaction
```

### `DB-CORE-10211`

**Message**

```markdown
Mutations are not allowed in read-only transactions. Transaction ID: %s
```

### `DB-CORE-10212`

**Message**

```markdown
The storage does not support mutations across multiple records. Storage: %s; Mutations: %s
```

### `DB-CORE-10213`

**Message**

```markdown
The storage does not support mutations across multiple tables. Storage: %s; Mutations: %s
```

### `DB-CORE-10214`

**Message**

```markdown
The storage does not support mutations across multiple namespaces. Storage: %s; Mutations: %s
```

### `DB-CORE-10215`

**Message**

```markdown
Mutations across multiple storages are not allowed. Mutations: %s
```

### `DB-CORE-10216`

**Message**

```markdown
The namespace has non-ScalarDB tables and cannot be dropped. Namespace: %s; Tables in the namespace: %s
```

### `DB-CORE-10258`

**Message**

```markdown
Specifying transaction metadata columns in the projection is not allowed. Table: %s; Column: %s
```

### `DB-CORE-10259`

**Message**

```markdown
Specifying transaction metadata columns in the ordering is not allowed. Table: %s; Column: %s
```

### `DB-CORE-10260`

**Message**

```markdown
Get operations using a secondary index are not allowed in the SERIALIZABLE isolation level without before-image indexes. Run repairTable() to create before-image indexes for the table, which will enable index-based Get operations in the SERIALIZABLE isolation level
```

### `DB-CORE-10261`

**Message**

```markdown
Scan operations using a secondary index are not allowed in the SERIALIZABLE isolation level without before-image indexes. Run repairTable() to create before-image indexes for the table, which will enable index-based Scan operations in the SERIALIZABLE isolation level
```

### `DB-CORE-10262`

**Message**

```markdown
Conditions on indexed columns in cross-partition scan operations are not allowed in the SERIALIZABLE isolation level without before-image indexes. Run repairTable() to create before-image indexes for the table, which will enable conditions on indexed columns in cross-partition scan operations in the SERIALIZABLE isolation level
```

### `DB-CORE-10281`

**Message**

```markdown
The column definition must be specified since %s is specified as a secondary index
```

## `DB-CORE-2xxxx` status codes

The following are status codes and messages for the concurrency error category.

### `DB-CORE-20000`

**Message**

```markdown
No mutation was applied
```

### `DB-CORE-20001`

**Message**

```markdown
Logging failed in the batch
```

### `DB-CORE-20002`

**Message**

```markdown
The operation failed in the batch with type %s
```

### `DB-CORE-20003`

**Message**

```markdown
An error occurred in the batch. Details: %s
```

### `DB-CORE-20004`

**Message**

```markdown
A Paxos phase in the CAS operation failed
```

### `DB-CORE-20005`

**Message**

```markdown
The learn phase in the CAS operation failed
```

### `DB-CORE-20006`

**Message**

```markdown
A simple write operation failed
```

### `DB-CORE-20007`

**Message**

```markdown
An error occurred in the mutation. Details: %s
```

### `DB-CORE-20008`

**Message**

```markdown
A RetryWith error occurred in the mutation. Details: %s
```

### `DB-CORE-20009`

**Message**

```markdown
A transaction conflict occurred in the mutation. Details: %s
```

### `DB-CORE-20010`

**Message**

```markdown
A transaction conflict occurred in the mutation. Details: %s
```

### `DB-CORE-20011`

**Message**

```markdown
A conflict occurred. Please try restarting the transaction. Details: %s
```

### `DB-CORE-20012`

**Message**

```markdown
The %s condition of the %s operation is not satisfied. Targeting column(s): %s
```

### `DB-CORE-20013`

**Message**

```markdown
The record being prepared already exists
```

### `DB-CORE-20014`

**Message**

```markdown
A conflict occurred when preparing records
```

### `DB-CORE-20015`

**Message**

```markdown
The committing state in the coordinator failed. The transaction has been aborted
```

### `DB-CORE-20016`

**Message**

```markdown
A conflict occurred during implicit pre-read
```

### `DB-CORE-20017`

**Message**

```markdown
This record needs to be recovered
```

### `DB-CORE-20018`

**Message**

```markdown
The record does not exist, so the %s condition is not satisfied
```

### `DB-CORE-20019`

**Message**

```markdown
The record exists, so the %s condition is not satisfied
```

### `DB-CORE-20020`

**Message**

```markdown
The condition on the column '%s' is not satisfied
```

### `DB-CORE-20022`

**Message**

```markdown
An anti-dependency was found. The transaction has been aborted
```

### `DB-CORE-20023`

**Message**

```markdown
A transaction conflict occurred in the Insert operation
```

### `DB-CORE-20024`

**Message**

```markdown
The %s condition of the %s operation is not satisfied. Targeting column(s): %s
```

### `DB-CORE-20025`

**Message**

```markdown
A transaction conflict occurred in the Insert operation
```

### `DB-CORE-20026`

**Message**

```markdown
A conflict occurred when committing records
```

### `DB-CORE-20028`

**Message**

```markdown
Before-image index recovery retry limit exceeded. Transaction ID: %s
```

### `DB-CORE-20029`

**Message**

```markdown
Records that need recovery were found during the before-image index check when closing the scanner. Transaction ID: %s
```

## `DB-CORE-3xxxx` status codes

The following are status codes and messages for the internal error category.

### `DB-CORE-30000`

**Message**

```markdown
Creating the namespace failed. Namespace: %s
```

### `DB-CORE-30001`

**Message**

```markdown
Dropping the namespace failed. Namespace: %s
```

### `DB-CORE-30002`

**Message**

```markdown
Creating the table failed. Table: %s
```

### `DB-CORE-30003`

**Message**

```markdown
Dropping the table failed. Table: %s
```

### `DB-CORE-30004`

**Message**

```markdown
Truncating the table failed. Table: %s
```

### `DB-CORE-30005`

**Message**

```markdown
Creating the index failed. Table: %s, Column: %s
```

### `DB-CORE-30006`

**Message**

```markdown
Dropping the index failed. Table: %s, Column: %s
```

### `DB-CORE-30007`

**Message**

```markdown
Getting the table metadata failed. Table: %s
```

### `DB-CORE-30008`

**Message**

```markdown
Getting the table names in the namespace failed. Namespace: %s
```

### `DB-CORE-30009`

**Message**

```markdown
Checking the namespace existence failed. Namespace: %s
```

### `DB-CORE-30010`

**Message**

```markdown
Checking the table existence failed. Table: %s
```

### `DB-CORE-30011`

**Message**

```markdown
Checking the index existence failed. Table: %s; Column: %s
```

### `DB-CORE-30012`

**Message**

```markdown
Repairing the namespace failed. Namespace: %s
```

### `DB-CORE-30013`

**Message**

```markdown
Repairing the table failed. Table: %s
```

### `DB-CORE-30014`

**Message**

```markdown
Adding a new column to the table failed. Table: %s; Column: %s; ColumnType: %s
```

### `DB-CORE-30015`

**Message**

```markdown
Getting the namespace names failed
```

### `DB-CORE-30016`

**Message**

```markdown
Getting the table metadata of the table being imported failed. Table: %s
```

### `DB-CORE-30017`

**Message**

```markdown
Importing the table failed. Table: %s
```

### `DB-CORE-30018`

**Message**

```markdown
Adding the raw column to the table failed. Table: %s; Column: %s; ColumnType: %s
```

### `DB-CORE-30019`

**Message**

```markdown
Upgrading the ScalarDB environment failed
```

### `DB-CORE-30020`

**Message**

```markdown
Something wrong because WriteType is neither CAS nor SIMPLE
```

### `DB-CORE-30021`

**Message**

```markdown
An error occurred in the selection. Details: %s
```

### `DB-CORE-30022`

**Message**

```markdown
An error occurred in the mutation. Details: %s
```

### `DB-CORE-30023`

**Message**

```markdown
An error occurred in the selection. Details: %s
```

### `DB-CORE-30024`

**Message**

```markdown
An error occurred in the mutation. Details: %s
```

### `DB-CORE-30025`

**Message**

```markdown
An error occurred in the selection. Details: %s
```

### `DB-CORE-30026`

**Message**

```markdown
An error occurred in the mutation. Details: %s
```

### `DB-CORE-30027`

**Message**

```markdown
An error occurred in the selection. Details: %s
```

### `DB-CORE-30028`

**Message**

```markdown
Fetching the next result failed. Details: %s
```

### `DB-CORE-30029`

**Message**

```markdown
Rolling back the transaction failed. Details: %s
```

### `DB-CORE-30030`

**Message**

```markdown
Committing the transaction failed. Details: %s
```

### `DB-CORE-30031`

**Message**

```markdown
The Get operation failed. Details: %s
```

### `DB-CORE-30032`

**Message**

```markdown
The Scan operation failed. Details: %s
```

### `DB-CORE-30033`

**Message**

```markdown
The Put operation failed. Details: %s
```

### `DB-CORE-30034`

**Message**

```markdown
The Delete operation failed. Details: %s
```

### `DB-CORE-30035`

**Message**

```markdown
Beginning a transaction failed. Details: %s
```

### `DB-CORE-30036`

**Message**

```markdown
Preparing records failed
```

### `DB-CORE-30037`

**Message**

```markdown
Validation failed
```

### `DB-CORE-30038`

**Message**

```markdown
Executing implicit pre-read failed
```

### `DB-CORE-30039`

**Message**

```markdown
Reading a record from the underlying storage failed
```

### `DB-CORE-30040`

**Message**

```markdown
Scanning records from the underlying storage failed
```

### `DB-CORE-30041`

**Message**

```markdown
Rollback failed because the transaction has already been committed
```

### `DB-CORE-30042`

**Message**

```markdown
Rollback failed
```

### `DB-CORE-30043`

**Message**

```markdown
The Insert operation failed. Details: %s
```

### `DB-CORE-30044`

**Message**

```markdown
The Upsert operation failed. Details: %s
```

### `DB-CORE-30045`

**Message**

```markdown
The Update operation failed. Details: %s
```

### `DB-CORE-30046`

**Message**

```markdown
Handling the before-preparation hook failed. Details: %s
```

### `DB-CORE-30054`

**Message**

```markdown
Getting the scanner failed. Details: %s
```

### `DB-CORE-30055`

**Message**

```markdown
Closing the scanner failed. Details: %s
```

### `DB-CORE-30056`

**Message**

```markdown
Getting the storage information failed. Namespace: %s
```

### `DB-CORE-30057`

**Message**

```markdown
Recovering records failed. Details: %s
```

### `DB-CORE-30058`

**Message**

```markdown
Committing records failed. Details: %s
```

## `DB-CORE-4xxxx` status codes

The following are status codes and messages for the unknown transaction status error category.

### `DB-CORE-40000`

**Message**

```markdown
Rolling back the transaction failed. Details: %s
```

### `DB-CORE-40001`

**Message**

```markdown
Committing state failed with NoMutationException, but the coordinator status does not exist
```

### `DB-CORE-40002`

**Message**

```markdown
The state cannot be retrieved
```

### `DB-CORE-40003`

**Message**

```markdown
The coordinator status is unknown
```

### `DB-CORE-40004`

**Message**

```markdown
Aborting state failed with NoMutationException, but the coordinator status does not exist
```
